# rpc-example

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test/: greeter.ts
